# llm-sql-agent

./: .gitignore  CANDIDATE.md  README.md  pyproject.toml  seed.sql  seed_hard.sql
app/: agent.py  db.py  main.py
app/static/: index.html
eval/: questions.json  run_eval.py
